// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Datagrid Snapshot Tests > should match snapshot with all features enabled 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 500px; height: 500px;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <div
            class=" h-[20px]"
            data-testid="header-expander"
          >
            <span />
            <span
              class="align-middle inline-block pl-1 -mt-1"
            >
              <span
                class="_icon_i4xp0_2 _icon--arrow-down_i4xp0_16 invisible"
              />
            </span>
          </div>
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <div
            class=" h-[20px]"
            data-testid="header-select"
          >
            <span>
              <label
                class="_checkbox_18i6t_2"
                data-part="root"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                for="checkbox:select-all:input"
                id="checkbox:select-all"
              >
                <div
                  aria-hidden="true"
                  class="_checkbox-control_r0pkw_2"
                  data-part="control"
                  data-scope="checkbox"
                  data-state="unchecked"
                  dir="ltr"
                  id="checkbox:select-all:control"
                >
                  <div
                    data-part="indicator"
                    data-scope="checkbox"
                    data-state="unchecked"
                    dir="ltr"
                    hidden=""
                  >
                    <span
                      class="_icon_i4xp0_2 _icon--check_i4xp0_61 _checkbox-control__icon_r0pkw_48"
                    />
                  </div>
                  <div
                    data-part="indicator"
                    data-scope="checkbox"
                    data-state="unchecked"
                    dir="ltr"
                    hidden=""
                  >
                    <span
                      class="_icon_i4xp0_2 _icon--minus_i4xp0_298 _checkbox-control__icon_r0pkw_48"
                    />
                  </div>
                  <input
                    aria-labelledby="checkbox:select-all:label"
                    id="checkbox:select-all:input"
                    name="select-all"
                    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
                    type="checkbox"
                    value="on"
                  />
                </div>
              </label>
            </span>
            <span
              class="align-middle inline-block pl-1 -mt-1"
            >
              <span
                class="_icon_i4xp0_2 _icon--arrow-down_i4xp0_16 invisible"
              />
            </span>
          </div>
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div
            class="cursor-pointer select-none h-[20px]"
            data-testid="header-name"
          >
            <span>
              name
            </span>
            <span
              class="align-middle inline-block pl-1 -mt-1"
            >
              <span
                class="_icon_i4xp0_2 _icon--arrow-up_i4xp0_34"
              />
            </span>
          </div>
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div
            class="cursor-pointer select-none h-[20px]"
            data-testid="header-age"
          >
            <span>
              age
            </span>
            <span
              class="align-middle inline-block pl-1 -mt-1"
            >
              <span
                class="_icon_i4xp0_2 _icon--arrow-down_i4xp0_16 invisible"
              />
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 102px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <div
            class="text-center"
            style="padding-left: 0rem;"
          >
            <button
              class="_button_10f3x_2 _button--primary_10f3x_99 _button--xs_10f3x_25 _button--ghost_10f3x_150"
              data-testid="manager-button"
              type="button"
            >
              <span
                class="_icon_i4xp0_2 _icon--chevron-right_i4xp0_76"
              />
            </button>
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <label
            class="_checkbox_18i6t_2"
            data-part="root"
            data-scope="checkbox"
            data-state="unchecked"
            dir="ltr"
            for="checkbox:0:input"
            id="checkbox:0"
          >
            <div
              aria-hidden="true"
              class="_checkbox-control_r0pkw_2"
              data-part="control"
              data-scope="checkbox"
              data-state="unchecked"
              dir="ltr"
              id="checkbox:0:control"
            >
              <div
                data-part="indicator"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                hidden=""
              >
                <span
                  class="_icon_i4xp0_2 _icon--check_i4xp0_61 _checkbox-control__icon_r0pkw_48"
                />
              </div>
              <div
                data-part="indicator"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                hidden=""
              >
                <span
                  class="_icon_i4xp0_2 _icon--minus_i4xp0_298 _checkbox-control__icon_r0pkw_48"
                />
              </div>
              <input
                aria-labelledby="checkbox:0:label"
                id="checkbox:0:input"
                name="select-0"
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
                type="checkbox"
                value="on"
              />
            </div>
          </label>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <div
            class="text-center"
            style="padding-left: 0rem;"
          >
            <button
              class="_button_10f3x_2 _button--primary_10f3x_99 _button--xs_10f3x_25 _button--ghost_10f3x_150"
              data-testid="manager-button"
              type="button"
            >
              <span
                class="_icon_i4xp0_2 _icon--chevron-right_i4xp0_76"
              />
            </button>
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <label
            class="_checkbox_18i6t_2"
            data-part="root"
            data-scope="checkbox"
            data-state="unchecked"
            dir="ltr"
            for="checkbox:1:input"
            id="checkbox:1"
          >
            <div
              aria-hidden="true"
              class="_checkbox-control_r0pkw_2"
              data-part="control"
              data-scope="checkbox"
              data-state="unchecked"
              dir="ltr"
              id="checkbox:1:control"
            >
              <div
                data-part="indicator"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                hidden=""
              >
                <span
                  class="_icon_i4xp0_2 _icon--check_i4xp0_61 _checkbox-control__icon_r0pkw_48"
                />
              </div>
              <div
                data-part="indicator"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                hidden=""
              >
                <span
                  class="_icon_i4xp0_2 _icon--minus_i4xp0_298 _checkbox-control__icon_r0pkw_48"
                />
              </div>
              <input
                aria-labelledby="checkbox:1:label"
                id="checkbox:1:input"
                name="select-1"
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
                type="checkbox"
                value="on"
              />
            </div>
          </label>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with basic props 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 100%; height: 100%;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          name
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 102px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with column visibility enabled 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 100%; height: 100%;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          name
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 102px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with custom container height 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 400px; height: 400px;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          name
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 102px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with empty data 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 100%; height: 100%;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          name
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          age
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="h-[3.25rem] w-full"
      >
        <td
          class="absolute text-center w-full py-[15px]"
          style="border-right: 1px solid var(--ods-color-neutral-100); left: 0px;"
        >
          <p
            class="_text--paragraph_1aw48_54"
          >
            Aucun résultat
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with expandable rows 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 100%; height: 100%;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 20px; min-width: 20px; max-width: 20px;"
        />
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          name
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 415px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <div
            class="text-center"
            style="padding-left: 0rem;"
          >
            <button
              class="_button_10f3x_2 _button--primary_10f3x_99 _button--xs_10f3x_25 _button--ghost_10f3x_150"
              data-testid="manager-button"
              type="button"
            >
              <span
                class="_icon_i4xp0_2 _icon--chevron-down_i4xp0_70"
              />
            </button>
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <div
            class="text-center"
            style="padding-left: 2rem;"
          />
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe Jr.
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            10
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="2"
        style="left: -1px; height: 50px; transform: translateY(100px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <div
            class="text-center"
            style="padding-left: 2rem;"
          />
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe Jr. 2
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            11
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="3"
        style="left: -1px; height: 50px; transform: translateY(150px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <div
            class="text-center"
            style="padding-left: 2rem;"
          />
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe Jr. 3
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            12
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="4"
        style="left: -1px; height: 50px; transform: translateY(200px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <div
            class="text-center"
            style="padding-left: 0rem;"
          >
            <button
              class="_button_10f3x_2 _button--primary_10f3x_99 _button--xs_10f3x_25 _button--ghost_10f3x_150"
              data-testid="manager-button"
              type="button"
            >
              <span
                class="_icon_i4xp0_2 _icon--chevron-down_i4xp0_70"
              />
            </button>
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with filters enabled 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 100%; height: 100%;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          name
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 102px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with loading state 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 100%; height: 100%;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          name
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 550px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
      <tr
        class="h-[50px]"
      >
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
      </tr>
      <tr
        class="h-[50px]"
      >
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
      </tr>
      <tr
        class="h-[50px]"
      >
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
      </tr>
      <tr
        class="h-[50px]"
      >
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
      </tr>
      <tr
        class="h-[50px]"
      >
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
      </tr>
      <tr
        class="h-[50px]"
      >
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
      </tr>
      <tr
        class="h-[50px]"
      >
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
      </tr>
      <tr
        class="h-[50px]"
      >
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
      </tr>
      <tr
        class="h-[50px]"
      >
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
      </tr>
      <tr
        class="h-[50px]"
      >
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
        <td
          class="overflow-hidden py-[8px]"
        >
          <div
            aria-busy="true"
            class="w-full"
          >
            <div
              class="_skeleton_kauw8_2"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with pagination 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 100%; height: 100%;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          name
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 102px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with row selection 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 100%; height: 100%;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <label
            class="_checkbox_18i6t_2"
            data-part="root"
            data-scope="checkbox"
            data-state="unchecked"
            dir="ltr"
            for="checkbox:select-all:input"
            id="checkbox:select-all"
          >
            <div
              aria-hidden="true"
              class="_checkbox-control_r0pkw_2"
              data-part="control"
              data-scope="checkbox"
              data-state="unchecked"
              dir="ltr"
              id="checkbox:select-all:control"
            >
              <div
                data-part="indicator"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                hidden=""
              >
                <span
                  class="_icon_i4xp0_2 _icon--check_i4xp0_61 _checkbox-control__icon_r0pkw_48"
                />
              </div>
              <div
                data-part="indicator"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                hidden=""
              >
                <span
                  class="_icon_i4xp0_2 _icon--minus_i4xp0_298 _checkbox-control__icon_r0pkw_48"
                />
              </div>
              <input
                aria-labelledby="checkbox:select-all:label"
                id="checkbox:select-all:input"
                name="select-all"
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
                type="checkbox"
                value="on"
              />
            </div>
          </label>
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          name
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 102px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <label
            class="_checkbox_18i6t_2"
            data-part="root"
            data-scope="checkbox"
            data-state="unchecked"
            dir="ltr"
            for="checkbox:0:input"
            id="checkbox:0"
          >
            <div
              aria-hidden="true"
              class="_checkbox-control_r0pkw_2"
              data-part="control"
              data-scope="checkbox"
              data-state="unchecked"
              dir="ltr"
              id="checkbox:0:control"
            >
              <div
                data-part="indicator"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                hidden=""
              >
                <span
                  class="_icon_i4xp0_2 _icon--check_i4xp0_61 _checkbox-control__icon_r0pkw_48"
                />
              </div>
              <div
                data-part="indicator"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                hidden=""
              >
                <span
                  class="_icon_i4xp0_2 _icon--minus_i4xp0_298 _checkbox-control__icon_r0pkw_48"
                />
              </div>
              <input
                aria-labelledby="checkbox:0:label"
                id="checkbox:0:input"
                name="select-0"
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
                type="checkbox"
                value="on"
              />
            </div>
          </label>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 20px; min-width: 20px; max-width: 20px;"
        >
          <label
            class="_checkbox_18i6t_2"
            data-part="root"
            data-scope="checkbox"
            data-state="unchecked"
            dir="ltr"
            for="checkbox:1:input"
            id="checkbox:1"
          >
            <div
              aria-hidden="true"
              class="_checkbox-control_r0pkw_2"
              data-part="control"
              data-scope="checkbox"
              data-state="unchecked"
              dir="ltr"
              id="checkbox:1:control"
            >
              <div
                data-part="indicator"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                hidden=""
              >
                <span
                  class="_icon_i4xp0_2 _icon--check_i4xp0_61 _checkbox-control__icon_r0pkw_48"
                />
              </div>
              <div
                data-part="indicator"
                data-scope="checkbox"
                data-state="unchecked"
                dir="ltr"
                hidden=""
              >
                <span
                  class="_icon_i4xp0_2 _icon--minus_i4xp0_298 _checkbox-control__icon_r0pkw_48"
                />
              </div>
              <input
                aria-labelledby="checkbox:1:label"
                id="checkbox:1:input"
                name="select-1"
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
                type="checkbox"
                value="on"
              />
            </div>
          </label>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with search enabled 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 100%; height: 100%;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          name
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 102px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with sorting enabled 1`] = `
<div
  class="overflow-auto relative w-full"
  style="max-height: 100%; height: 100%;"
>
  <table
    class="_table--md_1xkmm_54 w-full"
  >
    <thead
      class="sticky top-[-1px] z-10 bg-white overflow-hidden"
    >
      <tr
        class="h-[50px]"
      >
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div
            class="cursor-pointer select-none h-[20px]"
            data-testid="header-name"
          >
            <span>
              name
            </span>
            <span
              class="align-middle inline-block pl-1 -mt-1"
            >
              <span
                class="_icon_i4xp0_2 _icon--arrow-up_i4xp0_34"
              />
            </span>
          </div>
        </th>
        <th
          class="text-left pl-4 h-11 whitespace-nowrap "
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div
            class="cursor-pointer select-none h-[20px]"
            data-testid="header-age"
          >
            <span>
              age
            </span>
            <span
              class="align-middle inline-block pl-1 -mt-1"
            >
              <span
                class="_icon_i4xp0_2 _icon--arrow-down_i4xp0_16 invisible"
              />
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="w-full relative p-0 overflow-hidden"
      style="height: 102px;"
    >
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="0"
        style="left: -1px; height: 50px; transform: translateY(0px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            Jane Smith
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            25
          </div>
        </td>
      </tr>
      <tr
        class="overflow-hidden absolute top-0 w-full table table-fixed"
        data-index="1"
        style="left: -1px; height: 50px; transform: translateY(50px);"
      >
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            John Doe
          </div>
        </td>
        <td
          class="py-[8px] pl-4"
          style="width: 150px; min-width: 20px; max-width: 9007199254740991px;"
        >
          <div>
            30
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
